# pic-scraper-backend

./: .dockerignore  .gitattributes  .gitignore  CHANGELOG.md  Cargo.toml  Dockerfile  README.md  docker-compose.dev.yml  docker-compose.stage.yml  docker-compose.yml  sqlx-data.json
.github/workflows/: general.yml  pull-request.yml  scheduled-audit.yml  stage.yml
.sqlx/: query-2370d5cb67f11e1d0f8fec739305e2af21971b6078e4852e3412b3147568384a.json  query-2e5d06c17760d8e2b3f6a668b1e535d0450e10770373139f23993d2f83a68b16.json  query-2f6b37cba16f8c582c8a2b7ce5e9e63eb9db03f5a598293b451fb9cf4d5778ed.json  query-540d9597136d9c855e819301e87b1109f590b40e307093a31958fd9ca78368bd.json  query-585bdd5b1e34630a95acdb725246307092cde6105ab1443d5254e1d2fa216fa6.json  query-6c86c94e99cd0131b04a2fdb8f1a62f4f8fa3aeb9d7611be04f041dc459c8bd2.json  query-9c19ddc76d904a045c4a86a2449779c73cafc9bec2b971dca837468b8b049e6d.json  query-b400c10702034c929c86c7fef46469a6269a91ce7a563347877b2aa745209284.json
backend/api/: Cargo.toml
backend/api/src/: lib.rs  load.rs  main.rs  site_routes.rs  startup.rs
backend/config-builder/: Cargo.toml
backend/config-builder/src/: lib.rs
backend/config-structs/: Cargo.toml
backend/config-structs/src/: lib.rs
backend/embed/: Cargo.toml
backend/embed/src/: lib.rs
backend/errors/: Cargo.toml
backend/errors/src/: lib.rs
backend/etl/: Cargo.toml
backend/etl/src/: extract.rs  lib.rs  load.rs  main.rs  save.rs  startup.rs
backend/etl/src/transform/: bcy.rs  lofter.rs  mihoyo_bbs.rs  mod.rs  pixiv.rs  twitter_home.rs  twitter_honkai.rs
backend/migrations/: 20230814025944_last_update_time_table.sql  20240726180022_add_new_SERIAL_id_index.sql
backend/pic-scraper-backend/: Cargo.toml
backend/pic-scraper-backend/src/: config.rs  lib.rs  main.rs  site_routes.rs  startup.rs
backend/tele/: Cargo.toml
backend/tele/src/: lib.rs
backend/tests/: Cargo.toml  embed.rs  lib.rs  update.rs
backend/tests/assets/json/: bcy.json  embed-single.json  lofter.json  twitter-home.json  twitter-honkai.json
backend/tests/config/: base.yaml
config/: base.yaml  local.yaml  localdocker.yaml  prod.yaml  stage.yaml
frontend/: .env  .env.development  Dockerfile  index.html  package-lock.json  package.json
frontend/src/: App.vue  main.js  router.js  store.js
frontend/src/components/: LikeButton.vue  NavBar.vue  PostsComponent.vue
frontend/src/views/: PostsView.vue
migrations/: 20230311185312_create_honkai_posts_table.sql
scripts/: dev.ps1  init_db.sh  migrate.ps1
src/: config.rs  embed.rs  errors.rs  lib.rs  main.rs  site_routes.rs  startup.rs  telemetry.rs  utils.rs
src/etl/: extract.rs  load.rs  mod.rs
src/etl/transform/: bcy.rs  lofter.rs  mihoyo_bbs.rs  mod.rs  pixiv.rs  twitter_home.rs  twitter_honkai.rs
tests/: main.rs
tests/api/: embed.rs  helpers.rs  main.rs  update.rs
tests/assets/json/: embed-multiple.json  pixiv.json  twitter-home.json
tests/test-json/: lofter.htm  mihoyo.json  twitter-honkai.json
