[workspace]
members = ["backend/api", "backend/config-structs", "backend/config-builder", "backend/embed", "backend/errors", "backend/etl", "backend/tests", "backend/tele"]
resolver = "2"

[workspace.dependencies]
anyhow = "1.0.81"
async-trait = "0.1.79"
axum = { version = "0.7.5", default-features = false }
axum-extra = "0.9.3"
chrono = { version = "0.4.35", default-features = false }
config = "0.14.0"
delay_timer = "0.11.5"
dotenvy = "0.15.7"
futures = "0.3.30"
hyper = "1.2.0"
once_cell = "1.19.0"
opentelemetry = { version = "0.22.0", default-features = false }
opentelemetry-otlp = "0.15.0"
opentelemetry_sdk = { version = "0.22", default-features = false }
regex = "1.10.4"
reqwest = { version = "0.12.2", default-features = false }
secrecy = "0.8.0"
serde = { version = "1.0.197", default-features = false }
serde-aux = { version = "4.5.0", default-features = false }
serde_json = "1.0.114"
serde_path_to_error = "0.1.16"
sqlx = { version = "0.7.4", default-features = false }
thiserror = "1.0.58"
tokio = "1.36.0"
tonic = "0.11.0"
tower-http = "0.5.2"
tracing = { version = "0.1.40", default-features = false }
tracing-bunyan-formatter = "0.3.9"
tracing-log = "0.2.0"
tracing-opentelemetry = "0.23.0"
tracing-subscriber = "0.3.18"
uuid = "1.8.0"
wiremock = "0.6.0"
