[package]
name = "api"
version = "1.1.0"
edition = "2021"
publish = false

[lib]
path = "src/lib.rs"

[[bin]]
path = "src/main.rs"
name = "api"

[dependencies]
anyhow = "1.0.79"
async-trait = "0.1.77"
axum = { version = "0.7.4", features = ["tracing"] }
chrono = { version = "0.4.33", default-features = false, features = ["std"] }
config = "0.13.4"
dotenvy = "0.15.7"
futures = "0.3.30"
futures-util = "0.3.30"
hyper = "1.1.0"
regex = "1.10.3"
reqwest = { version = "0.11.24", default-features = false, features = [
    "json",
    "rustls-tls",
    "stream",
] }
secrecy = { version = "0.8.0", features = ["serde"] }
serde = { version = "1.0.196", features = ["derive"] }
serde_json = "1.0.113"
serde-aux = { version = "4.4.0", default-features = false }
thiserror = "1.0.56"
tokio = { version = "1.35.1", features = ["macros", "rt"] }
tower-http = { version = "0.5.1", features = ["trace", "fs"] }
tracing = { version = "0.1.40", features = ["log"] }
tracing-subscriber = { version = "0.3.18", features = ["env-filter", "json"] }

# local deps
config-builder = { path = "../config-builder" }
config-structs = { path = "../config-structs" }
embed = { path = "../embed" }
errors = { path = "../errors" }
etl = { path = "../etl" }
tele = { path = "../tele" }

[dependencies.uuid]
version = "1.7.0"
features = ["v4", "fast-rng", "macro-diagnostics", "serde"]

[dependencies.sqlx]
version = "0.7.3"
default-features = false
features = ["runtime-tokio-rustls", "macros", "postgres", "migrate"]

[dev-dependencies]
once_cell = "1.19.0"
serde_path_to_error = "0.1.15"
wiremock = "0.5.22"
