[package]
name = "api"
version = "1.1.0"
edition = "2021"
publish = false

[lib]
path = "src/lib.rs"

[[bin]]
path = "src/main.rs"
name = "api"

[dependencies]
anyhow = "1.0.81"
axum = { version = "0.7.4", features = ["tracing"] }
chrono = { version = "0.4.35", default-features = false, features = ["std"] }
reqwest = { version = "0.12.2", default-features = false, features = [
    "json",
    "rustls-tls",
    "stream",
] }
secrecy = { version = "0.8.0", features = ["serde"] }
serde = { version = "1.0.197", features = ["derive"] }
serde_json = "1.0.114"
tokio = { version = "1.36.0", features = ["macros", "rt"] }
tower-http = { version = "0.5.2", features = ["trace", "fs"] }
tracing = { version = "0.1.40", features = ["log"] }

# local deps
config-builder = { path = "../config-builder" }
config-structs = { path = "../config-structs" }
embed = { path = "../embed" }
errors = { path = "../errors" }
etl = { path = "../etl" }
tele = { path = "../tele" }

[dependencies.sqlx]
version = "0.7.4"
default-features = false
features = ["runtime-tokio-rustls", "macros", "postgres", "migrate"]

[dev-dependencies]
once_cell = "1.19.0"
serde_path_to_error = "0.1.16"
wiremock = "0.6.0"
