[package]
name = "api"
version = "1.1.0"
edition = "2021"
publish = false

[lib]
path = "src/lib.rs"

[[bin]]
path = "src/main.rs"
name = "api"

[dependencies]
anyhow = { workspace = true }
axum = { workspace = true, features = ["tracing", "tokio", "http1", "http2"] }
chrono = { workspace = true, features = ["std"] }
reqwest = { workspace = true, features = ["json", "rustls-tls", "stream"] }
secrecy = { workspace = true, features = ["serde"] }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
tokio = { workspace = true, features = ["macros", "rt"] }
tower-http = { workspace = true, features = ["trace", "fs"] }
tracing = { workspace = true, features = ["log"] }

# local deps
config-builder = { path = "../config-builder" }
config-structs = { path = "../config-structs" }
embed = { path = "../embed" }
errors = { path = "../errors" }
etl = { path = "../etl" }
tele = { path = "../tele" }
sqlx = { workspace = true, features = ["runtime-tokio-rustls", "macros", "postgres", "migrate"] }

[dev-dependencies]
once_cell = { workspace = true }
serde_path_to_error = { workspace = true }
wiremock = { workspace = true }
