[package]
name = "config-structs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.11.25", default-features = false }
secrecy = { version = "0.8.0", features = ["serde"] }
serde = { version = "1.0.197", features = ["derive"] }
serde-aux = { version = "4.5.0", default-features = false }
sqlx = { version = "0.7.3", default-features = false, features = ["postgres"] }
tracing = { version = "0.1.40", features = ["log"] }
