[package]
name = "config-structs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { workspace = true }
secrecy = { workspace = true, features = ["serde"] }
serde = { workspace = true, features = ["derive"] }
serde-aux = { workspace = true }
sqlx = { workspace = true, features = ["postgres"] }
tracing = { workspace = true, features = ["log"] }
