[package]
name = "embed"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.80"
axum = { version = "0.7.4", features = ["tracing"] }
axum-extra = { version = "0.9.2", features = ["typed-header"] }
base64 = "0.22.0"
futures = "0.3.30"
hyper = "1.2.0"
regex = "1.10.3"
reqwest = { version = "0.11.25", default-features = false, features = [
    "json",
    "rustls-tls",
    "stream",
] }
serde = { version = "1.0.197", features = ["derive"] }
serde_json = "1.0.114"
tracing = { version = "0.1.40", features = ["log"] }

# local deps
config-structs ={ path = "../config-structs" }
errors = { path = "../errors" }
