[package]
name = "embed"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = { workspace = true }
axum = { workspace = true, features = ["tracing", "json", "query"] }
axum-extra = { workspace = true, features = ["typed-header"] }
hyper = { workspace = true }
regex = { workspace = true }
reqwest = { workspace = true, features = ["json", "rustls-tls", "stream"] }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
tracing = { workspace = true, features = ["log"] }

# local deps
config-structs ={ path = "../config-structs" }
errors = { path = "../errors" }
