[package]
name = "errors"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.80"
axum = { version = "0.7.4" }
delay_timer = "0.11.5"
reqwest = { version = "0.11.24", default-features = false }
serde = { version = "1.0.197", default-features = false }
serde-aux = { version = "4.5.0", default-features = false }
thiserror = "1.0.57"
tracing = { version = "0.1.40", default-features = false }

[dependencies.sqlx]
version = "0.7.3"
default-features = false
