[package]
name = "etl"
version = "0.1.0"
edition = "2021"

[[bin]]
path = "src/main.rs"
name = "scraper"

[dependencies]
anyhow = "1.0.80"
async-trait = "0.1.77"
axum = { version = "0.7.4", default-features = false }
axum-extra = { version = "0.9.2", features = ["typed-header"] }
chrono = { version = "0.4.34", default-features = false, features = ["std"] }
config = "0.14.0"
delay_timer = "0.11.5"
dotenvy = "0.15.7"
futures = "0.3.30"
hyper = "1.2.0"
reqwest = { version = "0.11.24", default-features = false, features = ["json"] }
scraper = "0.18.1"
secrecy = { version = "0.8.0", features = ["serde"] }
serde = { version = "1.0.197", features = ["derive"] }
serde_json = "1.0.114"
sqlx = { version = "0.7.3", default-features = false, features = ["postgres", "macros", "runtime-tokio-rustls", "chrono"] }
tokio = { version = "1.36.0", features = ["macros", "rt"] }
tracing = { version = "0.1.40", features = ["log"] }

# local deps
config-builder = { path = "../config-builder" }
config-structs = { path = "../config-structs" }
errors = { path = "../errors" }
tele = { path = "../tele" }

[dev-dependencies]
serde_path_to_error = "0.1.15"
