[package]
name = "etl"
version = "0.1.0"
edition = "2021"

[[bin]]
path = "src/main.rs"
name = "scraper"

[dependencies]
anyhow = { workspace = true }
async-trait = { workspace = true }
axum = { workspace = true }
backon = { workspace = true }
chrono = { workspace = true, features = ["std"] }
delay_timer = { workspace = true }
futures = { workspace = true }
reqwest = { workspace = true, features = ["json"] }
secrecy = { workspace = true, features = ["serde"] }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
sqlx = { workspace = true, features = ["postgres", "macros", "runtime-tokio-rustls", "chrono"] }
tokio = { workspace = true, features = ["macros", "rt"] }
tracing = { workspace = true, features = ["log"] }

# local deps
config-builder = { path = "../config-builder" }
config-structs = { path = "../config-structs" }
errors = { path = "../errors" }
tele = { path = "../tele" }

[dev-dependencies]
serde_path_to_error = { workspace = true }
