[package]
name = "tele"
version = "0.2.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum-tracing-opentelemetry = "0.17"
init-tracing-opentelemetry = { version = "0.17", features = [
  "otlp",
  "tracing_subscriber_ext",
] }
opentelemetry = "0.21"
