[package]
name = "tele"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = { workspace = true, features = ["matched-path", "original-uri", "tokio"] }
opentelemetry = { workspace = true }
opentelemetry-otlp = { workspace = true, features = ["reqwest-client", "reqwest-rustls", "http-proto", "tls"] }
opentelemetry_sdk = { workspace = true, features = ["rt-tokio"] }
tonic = { workspace = true, features = ["tls", "tls-roots"] }
tower-http = { workspace = true, features = ["trace", "fs"] }
tracing = { workspace = true, features = ["log"] }
tracing-opentelemetry = { workspace = true }
tracing-subscriber = { workspace = true, features = ["env-filter", "json"] }
