[package]
name = "tests"
version = "0.1.0"
edition = "2021"
publish = false

[lib]
path = "lib.rs"

[dependencies]
once_cell = "1.18.0"
reqwest = { version = "0.11.20", default-features = false, features = ["json"] }
sqlx = { version = "0.7.1", default-features = false, features = ["runtime-tokio-rustls", "macros", "postgres", "migrate"] }
tokio = { version = "1.32.0", features = ["macros", "rt"] }
tracing = { version = "0.1.37", features = ["log"] }
tracing-bunyan-formatter = "0.3.9"
tracing-log = "0.1.3"
tracing-subscriber = { version = "0.3.17", features = ["env-filter", "json"] }
uuid = { version = "1.4.1", features = ["v4", "fast-rng", "macro-diagnostics", "serde"] }
wiremock = "0.5.19"

# local deps
config-builder = { path = "../config-builder" }
config-structs = { path = "../config-structs" }
etl = { path = "../etl" }
api = { path = "../api" }

[[test]]
name = "embed"
path = "embed.rs"

[[test]]
name = "update"
path = "update.rs"