[package]
name = "tests"
version = "0.1.0"
edition = "2021"
publish = false

[lib]
path = "lib.rs"

[dependencies]
once_cell = { workspace = true }
reqwest = { workspace = true, features = ["json"] }
sqlx = { workspace = true, features = ["runtime-tokio-rustls", "macros", "postgres", "migrate"] }
tokio = { workspace = true, features = ["macros", "rt"] }
tracing = { workspace = true, features = ["log"] }
tracing-bunyan-formatter = { workspace = true }
tracing-log = { workspace = true }
tracing-subscriber = { workspace = true, features = ["env-filter", "json"] }
uuid = { workspace = true, features = ["v4", "fast-rng", "macro-diagnostics", "serde"] }
wiremock = { workspace = true }

# local deps
config-builder = { path = "../config-builder" }
config-structs = { path = "../config-structs" }
etl = { path = "../etl" }
api = { path = "../api" }

[[test]]
name = "update"
path = "update.rs"
